# JobAppTracker

./: .gitignore  Cargo.toml  README.md  jobtrack.json
jobtracker/: Cargo.toml
jobtracker-cli/: Cargo.toml
jobtracker-cli/src/: main.rs
jobtracker-core/: Cargo.toml
jobtracker-core/src/: job.rs  job_app.rs  job_source.rs  job_status.rs  job_store.rs  lib.rs  summary_counts.rs
jobtracker-gui/: Cargo.toml
jobtracker-gui/src/: main.rs
jobtracker/src/: main.rs
