[package]
name = "jobtracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui_plot = "0.28.0"
strum = "0.27.2"
strum_macros = "0.27.2"
jobtracker-core = { path = "../jobtracker-core" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1.18.1", features = ["v4"] }